# ChangeLog for net-ftp/filezilla
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/filezilla/ChangeLog,v 1.33 2009/02/20 15:16:16 ken69267 Exp $

  20 Feb 2009; Kenneth Prugh <ken69267@gentoo.org> filezilla-3.2.0.ebuild:
  amd64 stable, bug #259142

  16 Feb 2009; Brent Baude <ranger@gentoo.org> filezilla-3.2.0.ebuild:
  stable ppc, bug 259142

*filezilla-3.2.1 (07 Feb 2009)

  07 Feb 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +filezilla-3.2.1.ebuild:
  Version bump, adds synchronized browsing, new iconset, and bugfixes

*filezilla-3.2.0 (07 Jan 2009)

  07 Jan 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +filezilla-3.2.0.ebuild:
  Version bump, adds bookmarks, logging to file, allow to use GNOME session
  manager via dbus to cleanly shut down on end of session

*filezilla-3.1.6 (02 Dec 2008)

  02 Dec 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +filezilla-3.1.6.ebuild:
  Version bump, automatically refresh remote directory listing if queue
  finishes successfully, bugfixes

*filezilla-3.1.5.1 (17 Nov 2008)

  17 Nov 2008; Bernard Cafarelli <voyageur@gentoo.org>
  -filezilla-3.0.4.ebuild, -filezilla-3.1.1.1.ebuild,
  -filezilla-3.1.2.ebuild, +filezilla-3.1.5.1.ebuild:
  Version bump, mostly bugfixes. Also remove some old versions

  13 Nov 2008; Raúl Porcel <armin76@gentoo.org> filezilla-3.1.3.1.ebuild:
  x86 stable wrt #245385

  08 Nov 2008; nixnut <nixnut@gentoo.org> filezilla-3.1.3.1.ebuild:
  Stable on ppc wrt bug 245385

  07 Nov 2008; Santiago M. Mola <coldwind@gentoo.org>
  filezilla-3.1.3.1.ebuild:
  amd64 stable wrt bug #245385, thanks to Víctor Enríquez
  <victor.quicksilver@gmail.com>.

  02 Nov 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing jsin as a maintainer since he was retired.

*filezilla-3.1.5 (22 Oct 2008)

  22 Oct 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +filezilla-3.1.5.ebuild: