@@ -5,6 +5,7 @@ DIST FileZilla_3.1.5_src.tar.bz2 2663052 RMD160 4e9b85653cfdfee2c91670f9f75cef2a
 DIST FileZilla_3.1.6_src.tar.bz2 2702053 RMD160 faa471409b1705ede49e7a11f489203090a9ba8c SHA1 955f31e5e718956d32cb92fa6558e78e22ec17ce SHA256 4aefbe240c90f6f7d98553f790b0d23c2d8dcc83e489b4d0583bf21bbc498ef0
 DIST FileZilla_3.2.0_src.tar.bz2 2789823 RMD160 932c53fba17092881cbbc5015cf36bdba8d18147 SHA1 ca8a358eb13c6b14fbff57fb87226e79131553aa SHA256 26ac3dc2cf1792373de76b11ced1eacd83786999fc3516af6c6d7e3339c44fdc
 DIST FileZilla_3.2.1_src.tar.bz2 2854766 RMD160 5518027b989f97d3e3a666794cec7268a1c4c2f3 SHA1 f455fff298b5293c00875c8b8adfa85c1af1d1f0 SHA256 aa99a6f1efb0dd12faeaaf3ae93163c4e5ce0493ea04fceba51e7c5f3eecbf7c
+DIST FileZilla_3.2.2_src.tar.bz2 2877478 RMD160 714a0e669b3da6915289c010783dd75e45dfe88e SHA1 e69e449bab14ff71c76b5bfa39e9d29f227700f4 SHA256 b6e7d5664a3b9490a23166fb74983ca18d8706078247601f710bca0fffbe0dd0
 EBUILD filezilla-3.1.3.1.ebuild 1047 RMD160 dd83c85eceed1e00c792f79392731f6b3f2aaded SHA1 cc607a80ec7ba10487fc5a43528e67d3155dce8a SHA256 f14070aa02b6e756f1e7074e60755a459ae677bca12874780f19d038e3d9fc3a
 EBUILD filezilla-3.1.4.1.ebuild 1051 RMD160 9477cc09b2d09c933a88254afb51320e0d14bcf5 SHA1 2800ea95a50f838d56d19e44c7b21b13c87cc56f SHA256 8e674acee26c4228ccd6358bd817e2c3b8393ee976cf410d27d303dc0e710c8c
 EBUILD filezilla-3.1.5.1.ebuild 1051 RMD160 e14ad10f4efa837721008bcaa989b58d23503c28 SHA1 2cfb8ec9e19e6d09cdb4c2d4fb90e220432a4da5 SHA256 a2baa10dc76735cb2b143b825db967a2fceb07e39b81a98b28c5523ff867fff7
@@ -12,5 +13,6 @@ EBUILD filezilla-3.1.5.ebuild 1049 RMD160 20c6c0f2aa36f0c5cf01d0f12fc288c93510c7
 EBUILD filezilla-3.1.6.ebuild 1049 RMD160 1e12f0697fd9f3cee87a2dc50e32073412279b74 SHA1 85139e79820216b26b4fd8d5311c50176273fd81 SHA256 48e6e7de82306933e9e60811cb2e9a2c19741e560c70ee86d8c60065c5af16ed
 EBUILD filezilla-3.2.0.ebuild 1068 RMD160 5b557e3466d9b9691578c19de2aaa330b3470b8b SHA1 f8d51c42a5d2f473d9f455254cf3a6a2016b515f SHA256 3e05c1d88f63855026da9fd8045c2c105977187bcef55b75cf7c25962c393a7e
 EBUILD filezilla-3.2.1.ebuild 1070 RMD160 6712da82e1fe799348a6940eb88ffe04391bda93 SHA1 0656a96e28d8a47bcd8f605c93fe5ff499676d86 SHA256 9fb23f562ba9292f6c1a926f8545434e4021856938836442e2dd1df58c6fe681
-MISC ChangeLog 5781 RMD160 a1463b4c733b15269938271ed810fff88b9dbf93 SHA1 0eeefd24fe788c80458468d1ca408fc700d814de SHA256 d17981ec2933e806e423efdee78ec4b6288e6e99b21341d515c77cdd8a4578fd
+EBUILD filezilla-3.2.2.ebuild 1070 RMD160 963ea1684b17293e403fffa43974f460179d33f4 SHA1 f337219235112b17bbe78e756b4991f88bcdd18f SHA256 b2afb4f77f55fa3c77fa43d361bd72b256ffcfb12dc1e6baf9f21d2f5035b013
+MISC ChangeLog 5939 RMD160 e5c0afe6c595b853ad83b258bb60860edef5ad77 SHA1 0c55f90f8252e03371d9e1088a13d7fd4c1d4440 SHA256 9883fa1804f2178b09fedb60aa0c810159c58882a17c438c6ea099294400c057
 MISC metadata.xml 358 RMD160 847093b8297b203ca89664d66e195f763d50e751 SHA1 a61011a0ee29bdb9a156e297a414bc2902598156 SHA256 13ba819a417c003a969b6557fd32a73ed49be658c3e0470c29a21ee807d5a28b
