@@ -1,6 +1,12 @@
 # ChangeLog for net-ftp/filezilla
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/filezilla/ChangeLog,v 1.33 2009/02/20 15:16:16 ken69267 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/filezilla/ChangeLog,v 1.34 2009/02/21 16:52:38 voyageur Exp $
+
+*filezilla-3.2.2 (21 Feb 2009)
+
+  21 Feb 2009; Bernard Cafarelli <voyageur@gentoo.org>
+  +filezilla-3.2.2.ebuild:
+  Version bump, bugfixes and minor changes
 
   20 Feb 2009; Kenneth Prugh <ken69267@gentoo.org> filezilla-3.2.0.ebuild:
   amd64 stable, bug #259142
